--- a/index.html
+++ b/index.html
@@ -7,9 +7,58 @@
     <title>Unity WebGL Player | Museo</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- As a heading -->
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">Navbar</span>
+        </div>
+    </nav>
+    <div id="Main" style="width: 100%; height: 100vh" class="text-center">
+        <h1 style="height: 0vh;">Retratos recordatorios</h1>
+        <table style="width: 100%; height: 90vh;" class="text-center">
+            <tbody>
+                <tr>
+                    <td class="align-middle">
+                        <div>
+                            <h2>¿Que es?</h2>
+                            <br>
+                            <h3>Es un proyecto que consiste en revelar informacion acerca del los retratos que puedas ver</h3>
+                            <br>
+                            <h2>¿Quienes son los creadores?</h2>
+                            <br>
+                            <h3>Este proyecto fue hecho por Manuel Rábago Ibarra</h3>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div id="Controls" style="width: 100%; height: 100vh" class="text-center bg-primary text-white">
+        <h1 style="height: 0vh;">Controles</h1>
+        <table style="width: 100%; height: 100vh;" class="text-center">
+            <tbody>
+                <tr>
+                    <td class="align-middle">
+                        <div>
+                            <h3>Mueve la camara moviendo el ratón.</h3>
+                            <br>
+                            <h3>Muevete con las flechas y salta con la barra espaciadora.</h3>
+                            <br>
+                            <h3>Mira los retratos de cerca para saber lo que dicen.</h3>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+    </div>
+
     <div id="unity-container" class="unity-desktop">
         <canvas id="unity-canvas" width=100% height=90vh></canvas>
         <div id="unity-loading-bar">
