--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+
 </head>
 
 <body>
     <!-- As a heading -->
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">Navbar</span>
+            <span class="navbar-brand mb-0 h1">Museo</span>
         </div>
     </nav>
     <div id="Main" style="width: 100%; height: 100vh" class="text-center">
@@ -33,6 +35,10 @@
                             <h2>¿Quienes son los creadores?</h2>
                             <br>
                             <h3>Este proyecto fue hecho por Manuel Rábago Ibarra</h3>
+                            <br>
+                            <h2>Otros creditos</h2>
+                            <br>
+                            <h3>Este proyecto usa contenido de Starter Assets - First Person Character Controller</h3>
                         </div>
                     </td>
                 </tr>
@@ -48,7 +54,40 @@
                         <div>
                             <h3>Mueve la camara moviendo el ratón.</h3>
                             <br>
+                            <h1><i class="bi bi-arrow-left-short"></i><i class="bi bi-mouse"><i class="bi bi-arrow-right-short"></i></i>
+                            </h1>
+                            <br>
                             <h3>Muevete con las flechas y salta con la barra espaciadora.</h3>
+                            <br>
+                            <div class="container" style="width: 150px">
+                                <div class="row" style="height: 50px">
+                                    <div class="col">
+
+                                    </div>
+                                    <div class="col border border-white">
+                                        <i class="bi bi-arrow-up"></i>
+                                    </div>
+                                    <div class="col">
+
+                                    </div>
+                                </div>
+                                <div class="row" style="height: 50px">
+                                    <div class="col border border-white">
+                                        <i class="bi bi-arrow-left"></i>
+                                    </div>
+                                    <div class="col border border-white">
+                                        <i class="bi bi-arrow-down"></i>
+                                    </div>
+                                    <div class="col border border-white">
+                                        <i class="bi bi-arrow-right"></i>
+                                    </div>
+                                </div>
+                                <div class="row" style="height: 50px">
+                                    <div class="col border border-white align-self-center" style="height: 50px">
+                                        Barra espaciadora
+                                    </div>
+                                </div>
+                            </div>
                             <br>
                             <h3>Mira los retratos de cerca para saber lo que dicen.</h3>
                         </div>
