--- a/index.html
+++ b/index.html
@@ -16,42 +16,65 @@
 
 <body>
     <!-- As a heading -->
-    <nav class="navbar navbar-dark bg-dark">
+    <!--<nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <span class="navbar-brand mb-0 h1">Museo</span>
         </div>
+    </nav>-->
+    <nav class="p-3 navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="index.html">Museo</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#Main">Introducción</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Controls">Controles</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#unity-container">Aplicación</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <div id="Main" style="width: 100%; height: 100vh" class="text-center">
-        <h1 style="height: 0vh;">Retratos recordatorios</h1>
-        <table style="width: 100%; height: 90vh;" class="text-center">
+    <div id="Main" style="width: 100%; height: 100%" class="text-center px-sm-5">
+
+        <table style="width: 100%; height: 100vh;" class="text-center">
             <tbody>
                 <tr>
                     <td class="align-middle">
                         <div>
+                            <h1>Retratos recordatorios</h1>
+                            <br>
                             <h2>¿Que es?</h2>
                             <br>
-                            <h3>Es un proyecto que consiste en revelar informacion acerca del los retratos que puedas ver</h3>
+                            <h3>Es un proyecto que consiste en revelar información acerca de los retratos que puedas ver. Estos retratos muestran algunas experiencias pasadas del autor.</h3>
                             <br>
                             <h2>¿Quienes son los creadores?</h2>
                             <br>
-                            <h3>Este proyecto fue hecho por Manuel Rábago Ibarra</h3>
+                            <h3>Este proyecto fue hecho por Manuel Rábago Ibarra.</h3>
                             <br>
                             <h2>Otros creditos</h2>
                             <br>
-                            <h3>Este proyecto usa contenido de Starter Assets - First Person Character Controller</h3>
+                            <h3>Este proyecto usa contenido de Starter Assets - First Person Character Controller por Unity Technologies.</h3>
                         </div>
                     </td>
                 </tr>
             </tbody>
         </table>
     </div>
-    <div id="Controls" style="width: 100%; height: 100vh" class="text-center bg-primary text-white">
-        <h1 style="height: 0vh;">Controles</h1>
+    <div id="Controls" style="width: 100%; height: 100vh" class="text-center bg-warning text-white">
+
         <table style="width: 100%; height: 100vh;" class="text-center">
             <tbody>
                 <tr>
                     <td class="align-middle">
                         <div>
+                            <h1>Controles</h1>
+                            <br>
                             <h3>Mueve la camara moviendo el ratón.</h3>
                             <br>
                             <h1><i class="bi bi-arrow-left-short"></i><i class="bi bi-mouse"><i class="bi bi-arrow-right-short"></i></i>
