--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -28,20 +31,56 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#Main">Introducción</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#carouselExampleIndicators">Capturas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Historia">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#unity-container">Aplicación</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#Controls">Controles</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#unity-container">Aplicación</a>
+                    <a class="nav-link" href="#Creditos">Creditos</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div id="Main" style="width: 100%; height: 100%" class="text-center px-sm-5">
-
+    
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="./TemplateData/scr5.png" >
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./TemplateData/scr2.png">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./TemplateData/scr3.png">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./TemplateData/scr4.png">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    <div id="Historia" style="width: 100%; height: 100%" class="text-center px-sm-5 text-white">
         <table style="width: 100%; height: 100vh;" class="text-center">
             <tbody>
                 <tr>
@@ -53,76 +92,22 @@
                             <br>
                             <h3>Es un proyecto que consiste en revelar información acerca de los retratos que puedas ver. Estos retratos muestran algunas experiencias pasadas del autor.</h3>
                             <br>
-                            <h2>¿Quienes son los creadores?</h2>
+                            <h2>¿De que se trata?</h2>
                             <br>
-                            <h3>Este proyecto fue hecho por Manuel Rábago Ibarra.</h3>
+                            <h3>En este proyecto, juegas a primera persona, moviendo al personaje cerca de un cuadro para saber que es lo que dice.</h3>
                             <br>
-                            <h2>Otros creditos</h2>
+                            <h2>¿Porque la interfaz esta un poco aplastada?</h2>
                             <br>
-                            <h3>Este proyecto usa contenido de Starter Assets - First Person Character Controller por Unity Technologies.</h3>
+                            <h3>Este proyecto esta diseñado para pantalla completa. Asi disfrutaras la experiencia maxima del proyecto</h3>
                         </div>
                     </td>
                 </tr>
             </tbody>
         </table>
-    </div>
-    <div id="Controls" style="width: 100%; height: 100vh" class="text-center bg-warning text-white">
-
-        <table style="width: 100%; height: 100vh;" class="text-center">
-            <tbody>
-                <tr>
-                    <td class="align-middle">
-                        <div>
-                            <h1>Controles</h1>
-                            <br>
-                            <h3>Mueve la camara moviendo el ratón.</h3>
-                            <br>
-                            <h1><i class="bi bi-arrow-left-short"></i><i class="bi bi-mouse"><i class="bi bi-arrow-right-short"></i></i>
-                            </h1>
-                            <br>
-                            <h3>Muevete con las flechas y salta con la barra espaciadora.</h3>
-                            <br>
-                            <div class="container" style="width: 150px">
-                                <div class="row" style="height: 50px">
-                                    <div class="col">
-
-                                    </div>
-                                    <div class="col border border-white">
-                                        <i class="bi bi-arrow-up"></i>
-                                    </div>
-                                    <div class="col">
-
-                                    </div>
-                                </div>
-                                <div class="row" style="height: 50px">
-                                    <div class="col border border-white">
-                                        <i class="bi bi-arrow-left"></i>
-                                    </div>
-                                    <div class="col border border-white">
-                                        <i class="bi bi-arrow-down"></i>
-                                    </div>
-                                    <div class="col border border-white">
-                                        <i class="bi bi-arrow-right"></i>
-                                    </div>
-                                </div>
-                                <div class="row" style="height: 50px">
-                                    <div class="col border border-white align-self-center" style="height: 50px">
-                                        Barra espaciadora
-                                    </div>
-                                </div>
-                            </div>
-                            <br>
-                            <h3>Mira los retratos de cerca para saber lo que dicen.</h3>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
     </div>
 
     <div id="unity-container" class="unity-desktop">
-        <canvas id="unity-canvas" width=100% height=90vh></canvas>
+        <canvas id="unity-canvas" width=100% height=100vh></canvas>
         <div id="unity-loading-bar">
             <div id="unity-logo"></div>
             <div id="unity-progress-bar-empty">
@@ -136,6 +121,83 @@
             <div id="unity-webgl-logo"></div>
             <div id="unity-fullscreen-button"></div>
             <div id="unity-build-title">Museo</div>
+        </div>
+        <div id="Controls" style="width: 100%; height: 100vh" class="text-center bg-warning text-white">
+
+            <table style="width: 100%; height: 100vh;" class="text-center">
+                <tbody>
+                    <tr>
+                        <td class="align-middle">
+                            <div>
+                                <h1>Controles</h1>
+                                <br>
+                                <h3>Mueve la camara moviendo el ratón.</h3>
+                                <br>
+                                <h1><i class="bi bi-arrow-left-short"></i><i class="bi bi-mouse"><i class="bi bi-arrow-right-short"></i></i>
+                                </h1>
+                                <br>
+                                <h3>Muevete con las flechas y salta con la barra espaciadora.</h3>
+                                <br>
+                                <div class="container" style="width: 150px">
+                                    <div class="row" style="height: 50px">
+                                        <div class="col">
+
+                                        </div>
+                                        <div class="col border border-white">
+                                            <i class="bi bi-arrow-up"></i>
+                                        </div>
+                                        <div class="col">
+
+                                        </div>
+                                    </div>
+                                    <div class="row" style="height: 50px">
+                                        <div class="col border border-white">
+                                            <i class="bi bi-arrow-left"></i>
+                                        </div>
+                                        <div class="col border border-white">
+                                            <i class="bi bi-arrow-down"></i>
+                                        </div>
+                                        <div class="col border border-white">
+                                            <i class="bi bi-arrow-right"></i>
+                                        </div>
+                                    </div>
+                                    <div class="row" style="height: 50px">
+                                        <div class="col border border-white align-self-center" style="height: 50px">
+                                            Barra espaciadora
+                                        </div>
+                                    </div>
+                                </div>
+                                <br>
+                                <h3>Mira los retratos de cerca para saber lo que dicen.</h3>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </div>
+        <div id="Creditos" style="width: 100%; height: 100vh" class="text-center  px-sm-5 bg-dark text-white">
+            <table style="width: 100%; height: 100vh;" class="text-center">
+                <tbody>
+                    <tr>
+                        <td class="align-middle">
+                            <div>
+                                <h1>Creditos</h1>
+                                <br>
+                                <h3>Este proyecto fue hecho por Manuel Rábago Ibarra en la Universidad Kino.</h3>
+                                <br>
+                                <h2>¿Quien es?</h2>
+                                <br>
+                                <h3>Es un estudiante de 9no Semestre aspirando a ser un creador de videojuegos y tratar de hacer lo mejor que se pueda. Su carrera actual es Ingeniero en Diseño Grafico Digital</h3>
+                                <br>
+                                <h2>Otros creditos</h2>
+                                <br>
+                                <h3>Este proyecto usa contenido de Starter Assets - First Person Character Controller por Unity Technologies.</h3>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
     <script>
@@ -176,7 +238,7 @@
             }, 5000);
         } else {
             canvas.style.width = "100%";
-            canvas.style.height = "90vh";
+            canvas.style.height = "93vh";
         }
         loadingBar.style.display = "block";
 
@@ -196,6 +258,7 @@
         };
         document.body.appendChild(script);
     </script>
+
 </body>
 
 </html>
