--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Museo</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <title>Museo de Retratos Recordatorios</title>
+    <link rel="shortcut icon" href="TemplateData/cruz.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -25,7 +25,7 @@
         </div>
     </nav>-->
     <nav class="p-3 navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Museo</a>
+        <a class="navbar-brand" href="index.html">M.R.R</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -62,7 +62,7 @@
             <img class="d-block w-100" src="./TemplateData/scr5.png" >
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="./TemplateData/scr2.png">
+            <img class="d-block w-100" src="./TemplateData/scr1.png">
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="./TemplateData/scr3.png">
@@ -86,7 +86,7 @@
                 <tr>
                     <td class="align-middle">
                         <div>
-                            <h1>Retratos recordatorios</h1>
+                            <h1>Museo de Retratos Recordatorios</h1>
                             <br>
                             <h2>¿Que es?</h2>
                             <br>
@@ -184,7 +184,7 @@
                             <div>
                                 <h1>Creditos</h1>
                                 <br>
-                                <h3>Este proyecto fue hecho por Manuel Rábago Ibarra en la Universidad Kino.</h3>
+                                <h3>Este proyecto fue hecho por Manuel Rábago Ibarra en la Universidad Kino en 2021.</h3>
                                 <br>
                                 <h2>¿Quien es?</h2>
                                 <br>
